# CarAutopilot

./: .gitignore  CMakeLists.txt  CarManager.h  Listener.h  UdpLogger.h  build.sh  main.cpp  tsensors.py  udp_log_8008.txt
include/: ASN1Exch.h  Algorithms.hpp  Car.hpp  EmergencyVehicle.hpp  GlobalPrimitives.hpp  ICADataSource.hpp  IntersectionCollisionAvoidance.hpp  Line.hpp  MAPDataSource.hpp  MapStorage.hpp  MapUpdate.hpp  Point.hpp  TempIdKeeper.hpp  TrafficLightStatus.hpp  V2XDataSource.hpp  V2XEnums.hpp  V2XTypes.hpp  alphabot.h  picar.h
include/asn_src/: ApproachOrLane.h  ConnectionManeuverAssist.h  ITIScodes.h  IntersectionCollision.h  MovementState.h  PathHistory.h  PathPrediction.h  RoadSideAlert.h  SignalGroupId.h  VehicleEventFlags.h  WaitOnStopLine.h  asn_internal.h
include/data_elements/: CBitString.hpp  Coordinate.hpp  DSecond.hpp  DescriptiveName.hpp  Elevation.hpp  Heading.hpp  Integer.hpp  IntersectionID.hpp  IntersectionStatusObject.hpp  LaneConnectionID.hpp  LaneID.hpp  Latitude.hpp  Longitude.hpp  MinuteOfTheYear.hpp  MsgCount.hpp  PedestrianBicycleDetect.hpp  PointXY.hpp  Position3D.hpp  RestrictionClassID.hpp  RoadRegulatorID.hpp  RoadSegmentReferenceID.hpp  SignalGroupID.hpp  Speed.hpp  SpeedAdvice.hpp  SteeringWheelAngle.hpp  TempId.hpp  TimeIntervalConfidence.hpp  TimeMark.hpp  TransmissionState.hpp  VehicleType.hpp  WaitOnStopLine.hpp  ZoneLength.hpp
include/data_frames/: AccelerationSet4Way.hpp  AdvisorySpeed.hpp  AdvisorySpeedList.hpp  ApproachOrLane.hpp  BrakeSystemStatus.hpp  CVehicleEventFlags.hpp  ConnectingLane.hpp  Connection.hpp  ConnectionManeuverAssist.hpp  DDateTime.hpp  EnabledLaneList.hpp  FullPositionVector.hpp  GenericLane.hpp  Intersection.hpp  IntersectionReferenceID.hpp  IntersectionState.hpp  LaneAttributes.hpp  LaneDataAttribute.hpp  LaneReferenceID.hpp  LaneReferenceId.hpp  LaneTypeAttributes.hpp  MovementEvent.hpp  MovementState.hpp  NodeAttributeSetXY.hpp  NodeOffsetPointXY.hpp  NodeXY.hpp  PathPrediction.hpp  PositionAccuracy.hpp  PositionConfidenceSet.hpp  RegulatorySpeedLimit.hpp  RoadSegment.hpp  SpeedandHeadingandThrottleConfidence.hpp  TimeChangeDetails.hpp  TransmissionAndSpeed.hpp  VehicleSize.hpp
include/msg/: BSMMessage.hpp  EVAMessage.hpp  ICAMessage.hpp  IV2XMessage.hpp  MAPMessage.hpp  MessageCounter.hpp  SPATMessage.hpp  V2XMessageConvertor.hpp
include/network/: Sender.hpp  V2XReceiver.hpp  V2XSender.hpp
src/: CarManager.cpp  Listener.cpp  Map.cpp  Map.h  UdpLogger.h
